<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="signUpSecondViewModel"
            type="com.example.fitin_kotlin.ui.onboard.signup.SignUpSecondViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintGuide_begin="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintGuide_end="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/iv_back"
            android:onClick="@{() -> signUpSecondViewModel.onBack()}"
            app:layout_constraintEnd_toStartOf="@id/tv_signup_title"
            app:layout_constraintStart_toStartOf="@id/btn_signup"
            app:layout_constraintTop_toTopOf="@id/tv_signup_title" />

        <ImageView
            android:id="@+id/tv_signup_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="40dp"
            android:gravity="center_horizontal"
            android:src="@drawable/iv_register"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="@+id/btn_signup"
            app:layout_constraintStart_toEndOf="@+id/btn_back"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/et_ver"
            android:hint="@string/register_phone_hint"
            android:padding="8dp"
            app:layout_constraintEnd_toStartOf="@id/btn_validation_send"
            app:layout_constraintStart_toStartOf="@id/btn_signup"
            app:layout_constraintTop_toTopOf="@id/btn_validation_send" />


        <ImageButton
            android:id="@+id/btn_validation_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/btn_ver_t"
            app:layout_constraintEnd_toEndOf="@id/btn_signup"
            app:layout_constraintStart_toEndOf="@id/et_phone_number"
            app:layout_constraintTop_toBottomOf="@id/tv_signup_title" />

        <EditText
            android:id="@+id/et_validation_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/et_ver"
            android:hint="@string/register_phone_verficaton"
            android:padding="8dp"
            app:layout_constraintEnd_toStartOf="@id/btn_validation_check"
            app:layout_constraintStart_toStartOf="@id/btn_signup"
            app:layout_constraintTop_toTopOf="@id/btn_validation_check" />

        <ImageButton
            android:id="@+id/btn_validation_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/btn_ver_c"
            app:layout_constraintEnd_toEndOf="@id/btn_signup"
            app:layout_constraintStart_toEndOf="@id/et_validation_number"
            app:layout_constraintTop_toBottomOf="@id/btn_validation_send" />


        <LinearLayout
            android:id="@+id/ll_checkboxGroup_clause"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="@id/btn_signup"
            app:layout_constraintEnd_toEndOf="@id/btn_signup"
            app:layout_constraintTop_toBottomOf="@id/btn_validation_check">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="24dp">

                <CheckBox
                    android:id="@+id/cb_all_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_second_all_check_cb_text"
                    android:textColor="@color/main_black"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cb_service_terms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/register_second_service_term_cb_text"
                    android:textColor="@color/main_black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_agr_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/see_terms"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="24dp">

                <CheckBox
                    android:id="@+id/cb_personal_information"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/register_second_personal_information_cb_text"
                    android:textColor="@color/main_black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_agr_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="@string/see_terms"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="24dp">

                <CheckBox
                    android:id="@+id/cb_location_service"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/register_second_location_service_cb_text"
                    android:textColor="@color/main_black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_agr_three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/see_terms"
                    android:textSize="16sp" />
            </LinearLayout>


        </LinearLayout>


        <ImageButton
            android:id="@+id/btn_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@android:color/transparent"
            android:src="@drawable/btn_register"
            android:text="@string/register_button_text"
            android:onClick="@{(v) -> signUpSecondViewModel.onSignUp(v)}"
            app:layout_constraintStart_toStartOf="@+id/gl_start"
            app:layout_constraintEnd_toEndOf="@id/gl_end"
            app:layout_constraintTop_toBottomOf="@+id/ll_checkboxGroup_clause" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>