<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="signUpViewModel"
            type="com.example.fitin_kotlin.ui.onboard.signup.SignUpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintGuide_begin="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintGuide_end="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/iv_back"
            android:onClick="@{() -> signUpViewModel.onBack()}"
            app:layout_constraintEnd_toStartOf="@id/iv_signup_title"
            app:layout_constraintStart_toStartOf="@id/et_name"
            app:layout_constraintTop_toTopOf="@id/iv_signup_title" />

        <ImageView
            android:id="@+id/iv_signup_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="40dp"
            android:gravity="center_horizontal"
            android:src="@drawable/iv_register"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="@+id/et_name"
            app:layout_constraintStart_toEndOf="@+id/btn_back"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:background="@drawable/et_input"
            android:hint="@string/register_name_hint"
            android:text="@={signUpViewModel.name}"
            android:minHeight="48dp"
            android:padding="8dp"
            android:maxLines="1"
            android:maxLength="10"
            android:singleLine="true"
            android:privateImeOptions="defaultInputmode=korean"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            app:layout_constraintEnd_toEndOf="@id/gl_end"
            app:layout_constraintTop_toBottomOf="@id/iv_signup_title" />

        <EditText
            android:id="@+id/et_email_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/et_email_f"
            android:hint="@string/register_emailId_hint"
            android:padding="8dp"
            android:text="@={signUpViewModel.id}"
            android:maxLines="1"
            android:maxLength="10"
            android:singleLine="true"
            app:layout_constraintStart_toStartOf="@id/et_name"
            app:layout_constraintEnd_toStartOf="@id/iv_email_symbol"
            app:layout_constraintTop_toTopOf="@id/et_email" />

        <ImageView
            android:id="@+id/iv_email_symbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/iv_email_symbol"
            app:layout_constraintStart_toEndOf="@id/et_email_id"
            app:layout_constraintTop_toTopOf="@id/et_email_id"
            app:layout_constraintBottom_toBottomOf="@id/et_email_id"/>

        <EditText
            android:id="@+id/et_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/et_email_b"
            android:hint="@string/register_email_hint"
            android:padding="8dp"
            android:maxLines="1"
            android:maxLength="10"
            android:singleLine="true"
            android:text="@={signUpViewModel.email}"
            app:layout_constraintStart_toEndOf="@id/iv_email_symbol"
            app:layout_constraintTop_toBottomOf="@id/et_name" />

        <ImageButton
            android:id="@+id/btn_val_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/btn_val_check"
            android:layout_marginStart="8dp"
            android:onClick="@{(v) -> signUpViewModel.onEmailDuplicateCheck(v)}"
            android:background="@android:color/transparent"
            app:layout_constraintStart_toEndOf="@id/et_email"
            app:layout_constraintTop_toTopOf="@id/et_email"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/et_input"
            android:hint="@string/register_password_hint"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="8dp"
            android:maxLines="1"
            android:maxLength="40"
            android:singleLine="true"
            android:text="@={signUpViewModel.password}"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            app:layout_constraintEnd_toEndOf="@id/gl_end"
            app:layout_constraintTop_toBottomOf="@id/et_email" />

        <EditText
            android:id="@+id/et_password_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/et_input"
            android:hint="@string/register_password_check_hint"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="8dp"
            android:maxLines="1"
            android:maxLength="40"
            android:singleLine="true"
            android:text="@={signUpViewModel.passwordCheck}"
            app:layout_constraintLeft_toLeftOf="@id/gl_start"
            app:layout_constraintRight_toRightOf="@id/gl_end"
            app:layout_constraintTop_toBottomOf="@id/et_password" />

        <EditText
            android:id="@+id/et_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/et_ver"
            android:text="@={signUpViewModel.phoneNumber}"
            android:maxLines="1"
            android:maxLength="15"
            android:singleLine="true"
            app:layout_constraintStart_toStartOf="@id/et_password_check"
            app:layout_constraintTop_toBottomOf="@id/et_password_check"
            android:hint="@string/register_phone_hint"
            android:layout_marginTop="8dp"/>

        <ImageButton
            android:id="@+id/btn_validation_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_ver_t"
            android:layout_marginStart="16dp"
            android:onClick="@{(v) -> signUpViewModel.onCoolSms(v)}"
            app:layout_constraintStart_toEndOf="@id/et_phone_number"
            app:layout_constraintTop_toTopOf="@id/et_phone_number"
            app:layout_constraintEnd_toEndOf="@id/et_password_check"/>

        <EditText
            android:id="@+id/et_validation_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/et_ver"
            android:text="@={signUpViewModel.validationNumber}"
            android:maxLines="1"
            android:maxLength="6"
            android:singleLine="true"
            app:layout_constraintStart_toStartOf="@id/et_phone_number"
            app:layout_constraintTop_toBottomOf="@id/et_phone_number"
            android:layout_marginTop="8dp"
            android:hint="@string/register_phone_verficaton"/>

        <ImageButton
            android:id="@+id/btn_validation_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_ver_c"
            android:onClick="@{(v) -> signUpViewModel.onValidationCheck(v)}"
            app:layout_constraintStart_toEndOf="@id/et_validation_number"
            app:layout_constraintTop_toTopOf="@id/et_validation_number"
            app:layout_constraintEnd_toEndOf="@id/btn_validation_send"
            android:layout_marginStart="16dp"/>

        <ImageButton
            android:id="@+id/btn_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@android:color/transparent"
            android:src="@drawable/btn_register"
            android:text="@string/register_button_text"
            android:onClick="@{(v) -> signUpViewModel.onSignUp(v)}"
            app:layout_constraintStart_toStartOf="@+id/gl_start"
            app:layout_constraintEnd_toEndOf="@id/gl_end"
            app:layout_constraintTop_toBottomOf="@id/et_validation_number" />

        <CheckBox
            android:id="@+id/cb_all_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="@id/btn_signup"
            app:layout_constraintEnd_toStartOf="@id/tv_service_term"
            app:layout_constraintTop_toBottomOf="@id/btn_signup" />

        <TextView
            android:id="@+id/tv_service_term"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/cb_all_check"
            app:layout_constraintEnd_toEndOf="@id/btn_signup"
            app:layout_constraintTop_toBottomOf="@id/btn_signup"
            android:layout_marginTop="24dp"
            android:textColor="#191919"
            android:textSize="16sp"
            android:gravity="center_horizontal"
            android:text="@string/signup_service_term"/>



    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>